[tool.poetry]
name = "late-checkout-scraping"
version = "0.1.0"
description = ""
authors = ["MoTaroh <52590586+MoTaroh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b2"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
